# hello-world-in-django-render

./: .gitignore  README.md  manage.py  pyproject.toml  requirements-dev.txt  requirements.txt
backend/: db.py  env.py  settings.py
custom_commands/management/commands/: superuser.py
html/: base.html  index.html
scripts/: build.sh
