[project]
name = "hello-world-in-django-render"
version = "0.1.0"
description = "A hello world django project in render"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=3.2,<3.3",
    "psycopg2-binary>=2.9.10",
    "python-decouple>=3.8",
    "whitenoise>=6.9.0",
]

[dependency-groups]
dev = [
    "ruff>=0.11.4",
]
